--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,10 @@
-altair==5.0.1
-cachetools==5.3.1
-certifi==2023.7.22
-charset-normalizer==3.2.0
-click==8.1.6
-decorator==5.1.1
-gspread==6.1.4
-google-auth==2.37.0
-google-auth-oauthlib==1.2.1
-oauth2client==4.1.3
-pandas==2.0.3
-python-dateutil==2.8.2
-pytz==2023.3
-requests==2.31.0
+--only-binary=:all:  # 모든 패키지에 대해 바이너리만 설치
 streamlit==1.25.0
 streamlit-calendar==1.2.1
-tenacity==8.2.2
-tzdata==2023.3
+pandas==2.0.3
+gspread==6.1.4
+oauth2client==4.1.3
+python-dateutil==2.8.2
 validators==0.20.0
+requests==2.31.0
+tzdata==2023.3
