--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
---only-binary=:all:  # 모든 패키지에 대해 바이너리만 설치
+--only-binary=:all: 
 streamlit==1.25.0
 streamlit-calendar==1.2.1
-pandas==2.0.3
+pandas==2.2.3
 gspread==6.1.4
 oauth2client==4.1.3
 python-dateutil==2.8.2
