--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 --only-binary=:all:
-streamlit==1.25.0
+streamlit==1.26.0
 streamlit-calendar==1.2.1
 pandas==2.2.3
+pillow==10.4.0
 gspread==6.1.4
 oauth2client==4.1.3
 python-dateutil==2.8.2
 validators==0.34.0
 requests==2.31.0
 tzdata==2023.3
-pip==24.3.1
